--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,42 +22,15 @@ services:
         networks:
             - sail
         depends_on:
-            # - mysql
-            - typesense
-    # mysql:
-    #     image: 'mysql/mysql-server:8.0'
-    #     ports:
-    #         - '${FORWARD_DB_PORT:-3306}:3306'
-    #     environment:
-    #         MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-    #         MYSQL_ROOT_HOST: '%'
-    #         MYSQL_DATABASE: '${DB_DATABASE}'
-    #         MYSQL_USER: '${DB_USERNAME}'
-    #         MYSQL_PASSWORD: '${DB_PASSWORD}'
-    #         MYSQL_ALLOW_EMPTY_PASSWORD: 1
-    #     volumes:
-    #         - 'sail-mysql:/var/lib/mysql'
-    #         - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
-    #     networks:
-    #         - sail
-    #     healthcheck:
-    #         test:
-    #             - CMD
-    #             - mysqladmin
-    #             - ping
-    #             - '-p${DB_PASSWORD}'
-    #         retries: 3
-    #         timeout: 5s
-    typesense:
-        image: 'typesense/typesense:0.25.2'
+            - meilisearch
+    meilisearch:
+        image: 'getmeili/meilisearch:latest'
         ports:
-            - '${FORWARD_TYPESENSE_PORT:-8108}:8108'
+            - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
         environment:
-            TYPESENSE_DATA_DIR: '${TYPESENSE_DATA_DIR:-/typesense-data}'
-            TYPESENSE_API_KEY: '${TYPESENSE_API_KEY:-xyz}'
-            TYPESENSE_ENABLE_CORS: '${TYPESENSE_ENABLE_CORS:-true}'
+            MEILI_NO_ANALYTICS: '${MEILISEARCH_NO_ANALYTICS:-false}'
         volumes:
-            - 'sail-typesense:/typesense-data'
+            - 'sail-meilisearch:/meili_data'
         networks:
             - sail
         healthcheck:
@@ -66,14 +39,12 @@ services:
                 - wget
                 - '--no-verbose'
                 - '--spider'
-                - 'http://localhost:8108/health'
-            retries: 5
-            timeout: 7s
+                - 'http://127.0.0.1:7700/health'
+            retries: 3
+            timeout: 5s
 networks:
     sail:
         driver: bridge
 volumes:
-    sail-mysql:
-        driver: local
-    sail-typesense:
+    sail-meilisearch:
         driver: local
